<resources>
    <string name="app_name">MATUSI</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">acras1@gmail.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="give_permissions">\tThe app needs some permissions to be fully functional.\n
        \tIt needs access to your geolocation to be able to find you on Google Maps.\n
        \tThank you for understanding!</string>
    <string name="do_not_ask">Do not ask in the future</string>
    <string name="give_permissions_title">We need some permissions</string>
    <string name="not_functional">MATUSI won\'t be fully functional</string>
    <string name="not_functional_check">MATUSI won\'t be fully functional. Any time you want to change it, please, go to System Settings and grant permissions</string>
    <string name="welcome">Successfully signed in. Welcome, %1$s!</string>
    <string name="error">We couldn\'t sign you in. Please try again later</string>
    <string name="enter_address_button">Set your address</string>
    <string name="choose_my_location">Use my current location</string>
    <string name="enter_address_title">Enter desired address</string>
    <string name="enter_address">Enter desired address, please</string>
    <string name="pick_location_on_map">Please, set your location to join a local daycare group:</string>
    <string name="save_location">Save location</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="new_user">New user</string>
    <string name="existing_user">Existing user</string>
    <string name="sign_up">Sign up</string>
    <string name="delete_account">Delete account</string>
    <string name="sign_out">Sign out</string>
    <string name="authorize">Authorization</string>
    <string name="sign_out_failed">Signing out failed</string>
    <string name="delete_account_failed">Deleting account failed</string>
    <string name="authorization_failed">Authorization failed</string>
    <string name="fill_all_fields">Fill all fields, please</string>
    <string name="field_empty">Field can\'t be empty</string>
    <string name="password_not_equal">Entered passwords do not match</string>
    <string name="delete_account_title">Delete account</string>
    <string name="delete_account_body">Are you sure you want to delete this account?</string>
    <string name="welcome_title">Welcome to Matusi!</string>
    <string name="location_title">My Profile - Location</string>
    <string name="sign_in_with_email">Email sign-in</string>
    <string name="account_settings">Profile settings</string>
    <string name="enter_social">Enter one of your social media (Facebook, Twitter, LinkedIn, Whatsapp, Telegram etc.)</string>
    <string name="add_child">Add child</string>
    <string name="set_schedule">Set schedule</string>
    <string name="enter_age">Child age</string>
    <string name="add_child_hint">Click on \"Add child\" to add a child. After adding - single click on child name leads to editing, long click - to deleting</string>
    <string name="delete_child_title">Delete item</string>
    <string name="delete_child_body">Are you sure you want to delete this item?</string>
    <string name="save_user">Save to account</string>
    <string name="name_and_social">Your MATUSI account was created! Now fill out your profile, please, to let us know how we can help you</string>
    <string name="skype" translatable="false">Skype</string>
    <string name="viber" translatable="false">Viber</string>
    <string name="fill_social">Please, provide at least one social media</string>
    <string name="kid">Kid %1$d</string>
    <string name="tell_about_kids">Tell us about your kids</string>
    <string name="set_radius_title">My Profile - Area</string>
    <string name="set_radius">Please, set your area to find a local daycare group:</string>
    <string name="name_title">My Profile - Personification</string>
    <string name="add_child_title">My Profile - Kids</string>
    <string name="choose_limit">Choose you max zone radius (km)</string>
    <string name="edit_child">Edit child description</string>
    <string name="terms_of_use_agree">I agree with all the app terms of use</string>
    <string name="terms_of_use">All information on our mobile application is provided in good faith,
        however we make no representation or warranty of any kind, express or implied, regarding the accuracy,
        adequacy, validity, reliability, viability, or completeness of any information ot the mobile application.
        Under no circumstance shall we have any liability to you for any loss or damage of any kind incurred as a result
        of the use of the mobile application or reliance on any information provided on the out mobile application.
        Your use of the mobile application and your use of any information on this mobile application is solely at
        your own risk</string>
    <string name="click_to_see"><u>Click to view</u></string>
    <string name="terms_of_use_title">Terms of Use</string>
    <string name="babysit_title">Tell us when you can babysit:</string>
    <string name="time_title">Set %1$s time for %2$s</string>
    <string name="child_schedule">Children schedule</string>
    <string name="null_activity" translatable="false">Activity cannot be null</string>
    <string name="welcome_summary">
•   Do you need to go to work? Are you looking for <font color="#FFE79C3E">daycare</font> for your <font color="#FFE79C3E">kids</font>?\n
•   Are most of <font color="#FFE79C3E">daycare</font> services <font color="#FFE79C3E">inaccessible</font> or <font color="#FFE79C3E">too expensive</font> for you?\n
•   We will help you to find <font color="#FFE79C3E">nearby moms</font> with the same problems!\n
•   <font color="#FFE79C3E">Organize</font> your kids into <font color="#FFE79C3E">daycare groups</font> and take <font color="#FFE79C3E">turns</font> looking after them in your free time!\n
•   Enjoy your <font color="#FFE79C3E">work</font> while your kids are <font color="#FFE79C3E">happy</font> and <font color="#FFE79C3E">safe</font>!
    </string>
    <string name="account_summary_title">You can modify your profile data below:</string>
    <string name="location"><b>Your selected location is:</b>\n%1$s</string>
    <string name="radius"><b>Your selected radius of zone is:</b>\n%1$d km</string>
    <string name="children"><b>Children:</b>\n</string>
    <string name="schedule"><b>Schedule:</b>\n</string>
    <string name="confirm_password">Repeat password</string>
    <string name="enter_password">Enter password</string>
    <string name="passwords_not_match">Passwords do not match</string>
    <string name="passwords_match">Passwords match</string>
    <string name="check_request_status">Check my request status</string>
    <string name="manage_groups">Manage my groups</string>
    <string name="find_user">Find user</string>
    <string name="find_user_title">You can find users by the next parameters:</string>
</resources>