<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.settings.fragment.UserSettingsUserLocationFragment">

    <TextView
        android:id="@+id/tv_pickLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pick_location_on_map"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/margin_8dp"
        android:layout_marginTop="@dimen/margin_8dp"
        android:layout_marginEnd="@dimen/margin_8dp"
        android:layout_marginBottom="@dimen/margin_16dp"
        app:layout_constraintBottom_toTopOf="@+id/il_enterAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_pickLocation" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/il_enterAddress"
        style="@style/TextInputLayoutStyle"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_height_64dp"
        android:layout_marginBottom="@dimen/margin_8dp"
        android:layout_marginStart="@dimen/margin_16dp"
        android:layout_marginEnd="@dimen/margin_8dp"
        android:textColorHint="@color/edittext_hint_color"
        app:layout_constraintBottom_toTopOf="@+id/btn_currentLocation"
        app:layout_constraintEnd_toStartOf="@+id/btn_enterAddress"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_enterAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_address"
            android:importantForAutofill="no"
            android:inputType="textPostalAddress"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_20sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/btn_enterAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_8dp"
        android:layout_marginEnd="@dimen/margin_16dp"
        android:background="@drawable/ic_find"
        app:layout_constraintBottom_toBottomOf="@+id/il_enterAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/il_enterAddress"
        app:layout_constraintTop_toTopOf="@+id/il_enterAddress" />

    <Button
        android:id="@+id/btn_currentLocation"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height_64dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="@dimen/margin_16dp"
        android:layout_marginEnd="@dimen/margin_16dp"
        android:layout_marginBottom="@dimen/margin_8dp"
        android:backgroundTint="@color/button_state_colors"
        android:gravity="center"
        android:text="@string/choose_my_location"
        android:textColor="@color/button_text_state_colors"
        app:layout_constraintBottom_toTopOf="@+id/btn_next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_next"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height_64dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="@dimen/margin_16dp"
        android:layout_marginEnd="@dimen/margin_16dp"
        android:layout_marginBottom="@dimen/margin_8dp"
        android:backgroundTint="@color/button_state_colors"
        android:gravity="center"
        android:text="@string/save_user"
        android:textColor="@color/button_text_state_colors"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>